--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "tsc && node ./dist/src/main.js",
+    "start": "nodemon -e ts --exec \"npm run compile\""
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/damien-schneider/poly-talk/issues"
   },
-  "homepage": "https://github.com/damien-schneider/poly-talk#readme"
+  "homepage": "https://github.com/damien-schneider/poly-talk#readme",
+  "dependencies": {
+    "@types/express": "^4.17.16",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
